- fix Remove WebUpd8 Team Java PPA (for Oracle Java)

--- a/tasks/webupd8_for_debian.yml
+++ b/tasks/webupd8_for_debian.yml
@@ -12,5 +12,5 @@
   when: java_needs_oracle
 
 - name: Remove WebUpd8 Team Java PPA (for Oracle Java)
-  apt_repository: repo='deb http://ppa.launchpad.net/webupd8team/java/ubuntu precise main' state=present
+  apt_repository: repo='deb http://ppa.launchpad.net/webupd8team/java/ubuntu precise main' state=absent
   when: java_cleanup and not java_needs_oracle
